--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -5,6 +5,8 @@ services:
         build:
           context: ./
           dockerfile: ./Dockerfile
+        ports:
+          - "4000:4000"
         volumes: 
             - .:/app
             - /app/node_modules
